--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,28 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: null }
+        your_db_provider:
+            entity:
+                class: App\Entity\User
+                property: apikey
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        api:
+            anonymous: ~
+            pattern: ^/api(?!/doc$)
+            stateless: true
+            provider: your_db_provider
+            guard:
+                authenticators:
+                    - App\Security\ApiTokenAuthenticator
         main:
-            anonymous: true
+            anonymous: ~
+            logout: ~
+
+
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -18,5 +33,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+
