--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 /docker/mysql
 /.idea
 ###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
