--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.5",
+        "nelmio/api-doc-bundle": "^3.4",
         "sensio/framework-extra-bundle": "^5.4",
+        "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
@@ -21,7 +23,10 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "hautelook/alice-bundle": "^2.5",
+        "symfony/browser-kit": "4.3.*",
         "symfony/maker-bundle": "^1.13",
+        "symfony/phpunit-bridge": "^4.3",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
