--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -8,6 +8,7 @@ fos_rest:
   format_listener:
     rules:
       - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ]}
+      - { path: ^/, prefer_extension: true, fallback_format: json, priorities: [ json, html ]}
   body_converter:
     enabled: true
     validate: true
